  * Bugfix: Don't crash when Xinerama is disabled.
  * Bugfix: Correctly remove client from container when moving to another
    workspace.
  * Bugfix: Set focus to the client which was previously focused instead of
    the next client in container when moving windows out of a container.
  * Bugfix: Correctly set focus when switching between screens.
  * Bugfix: Don't crash anymore moving focus to another screen under the
    following conditions: The screen you switch to has a lower number of cells
    and/or rows than the current one, you switch focus using your mouse, you
    previously were in a column/row which is not available on the destination
    screen.
  * Bugfix: When switching screens, warp the pointer to the correct
    destination window.
  * Bugfix: Store dock clients per screen, not per workspace.
  * Bugfix: Perform bounds checking for snapped containers.
  * Bugfix: Send clients their absolute position/size (on the root window) in
    generated configure events. This fixes problems with xfontsel, xmaple,
    etc.
  * Bugfix: Correctly update state when moving fullscreen windows across
    workspaces.
  * Bugfix: Correctly restart i3 when not using its absolute path
  * Bugfix: Drag & Drop in GTK applications works now
  * Bugfix: Don't hide non-managed windows (libnotify-popups for example)
    when raising clients in stacked containers.
  * Bugfix: Correctly restore focus when leaving fullscreen mode
  * Bugfix: Re-distribute free space when closing customly resized containers,
    re-evaluate for other containers
  * Implement scrolling on stack windows and on the bottom bar.
  * Create i3-wm-dbg with debug symbols
  * Don't rely on libxcb-wm any longer, as it got removed in libxcb 0.3.4.

 -- Michael Stapelberg <michael@stapelberg.de>  Sat, 02 May 2009 20:55:46 +0200

i3-wm (3.a-1) unstable; urgency=low

  * First release (Closes: #521709)

 -- Michael Stapelberg <michael@stapelberg.de>  Sun, 29 Mar 2009 18:21:30 +0200