@@ -31,6 +31,9 @@ i3-wm (3.a-bf1-1) unstable; urgency=low
   * Bugfix: Correctly restore focus when leaving fullscreen mode
   * Bugfix: Re-distribute free space when closing customly resized containers,
     re-evaluate for other containers
+  * Bugfix: When moving windows into different containers, insert them at the
+    correct position.
+  * Bugfix: Correctly set focus when moving windows into other containers
   * Implement scrolling on stack windows and on the bottom bar.
   * Create i3-wm-dbg with debug symbols
   * Don't rely on libxcb-wm any longer, as it got removed in libxcb 0.3.4.
